<resources>
    <string name="app_name">HealthHub</string>
    <string name="AppName">HealthHub</string>
    <string name="start_page_image">Start Page image</string>
    <string name="signup">SignUP</string>
    <string name="make_your_life_healthier">Make your life healthier</string>
    <string name="sign_in">sign In</string>
    <string name="sign_up">sign up</string>
    <string name="register">Register</string>
    <string name="username">" Username"</string>
    <string name="password">" Password"</string>
    <string name="weight">" Weight"</string>
    <string name="height">" Height"</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="about_dev">\tThe application was made \nas a term paper by a student of the Faculty of Computer Sciences Pavel Smirnov</string>
    <string name="about_app">About App</string>
    <string name="about_account">About Account</string>
    <string name="user_login">"Login: "</string>
    <string name="user_weight">"Weight: "</string>
    <string name="user_height">"Height: "</string>
    <string name="calorie_table">Calorie Table</string>
    <string name="your_exercises">Your exercises</string>
    <string name="search_food">Search food</string>
    <string name="your_workout_plan">Your Workout plan</string>
    <string name="count">Count</string>
    <string name="exercises_name">Exercises name</string>
    <string name="delete_note">Delete note</string>
    <string name="welcome_image">welcome_image</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">" Email"</string>
    <string name="your_workout">Your Workout</string>
    <string name="logout">Logout</string>
    <string name="uspg_email">Email:</string>
</resources>