<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10sp"
    android:layout_marginStart="5sp"
    android:layout_marginEnd="5sp"
    android:padding="3sp"
    android:paddingStart="10dp"
    android:paddingEnd="0dp"
    android:background="@drawable/exercise_row_style">

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/exercises_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30sp"
        android:gravity="center_vertical"
        android:text="@string/exercises_name"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="50sp"
        android:text="@string/count"
        android:textSize="18sp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="20sp"
        android:background="@color/white"
        android:src="@drawable/ic_delete"
        android:scaleType="centerInside"
        android:contentDescription="@string/delete_note"/>

</LinearLayout>