<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/about_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/about_account"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/uspg_email"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/about_acc"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        app:layout_constraintTop_toBottomOf="@id/about_acc"
        app:layout_constraintLeft_toRightOf="@id/email"
        />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/user_weight"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/weight_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="35dp"
        android:minHeight="35dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:textSize="26sp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        app:layout_constraintLeft_toRightOf="@id/weight"
        />

    <TextView
        android:id="@+id/weight_num_dim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/transparent"
        android:text="kg"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        app:layout_constraintLeft_toRightOf="@id/weight_num"
        />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/user_height"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/weight"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/height_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="35dp"
        android:minHeight="35dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:textSize="26sp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/weight_num"
        app:layout_constraintLeft_toRightOf="@id/height"
        />

    <TextView
        android:id="@+id/height_num_dim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/transparent"
        android:text="sm"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/weight_num_dim"
        app:layout_constraintLeft_toRightOf="@id/height_num"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/logout"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/red_button"
        android:layout_gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/back_button"
        android:layout_gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        />


</androidx.constraintlayout.widget.ConstraintLayout>